# gcp-agentic-unstructured-data-retrieval

./: .env.example  .gitignore  AGENT_ARCHITECTURE.md  CHALLENGE.md  INFRASTRUCTURE_SETUP.md  Makefile  README.md  adk-migration.md  adk.md  agent.md  create_datastore.sh  datastore_create.md  fix-region.md  fix.md  implementation_plan.md  main.py  out.txt  pyproject.toml  requirements.txt
data/processed/: eval_results.json  golden_dataset.jsonl  metadata.jsonl  processed_data.json
scripts/: README.md  create_datastore.sh  create_enterprise_engine.py  generate_data.py  generate_golden_dataset.py  run_evaluation.py
src/agents/: README.md  adk_agent.py  rag_agent.py  tools.py
src/ingestion/: README.md  chunker.py  parser.py  pipeline.py
src/search/: vertex_client.py
