[project]
name = "nelly-hackathon-mvp"
version = "0.1.0"
description = "A Python-based skeleton for a RAG (Retrieval-Augmented Generation) system."
authors = [
    {name = "Gemini"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "google-cloud-discoveryengine>=0.11.0",
    "google-cloud-aiplatform>=1.38.0",
    "pypdf>=3.17.0",
]

[tool.poetry]
packages = [
    { include = "src" },
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.0"
mypy = "^1.0"
deptry = "^0.16.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
