[tool.poetry]
name = "gcp-agentic-unstructured-data-retrieval"
version = "0.1.0"
description = "A Python-based skeleton for a RAG system using GCP's Vertex AI and Discovery Engine."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
google-cloud-aiplatform = "^1.47.0"
google-cloud-discoveryengine = "^0.10.0"
pypdf = "^4.1.0"
python-dotenv = "^1.0.1"
ipykernel = "^6.29.4"
google-cloud-storage = "^2.16.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.15"
mypy = "^1.8.0"
deptry = "^0.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
